# inic-programming-library

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.txt  README.md  README.txt
cmake/: arm-linux-gnuabihf.cmake
doc/html/: dir_0050ca94a265f7ecb389c44d1de9974e.html  dir_0050ca94a265f7ecb389c44d1de9974e.js  files.html  globals_0x64.html  globals_0x6d.html  globals_0x6f.html  globals_0x72.html  globals_0x74.html  globals_0x76.html  globals_defs.js  globals_defs_0x69.html  globals_defs_0x6d.html  globals_vars.html  group__api.html  group__bm.html  group__bm__data.js  group__chip__ids.html  group__chunk__handling.html  group__constants.html  group__constants.js  group__intpin.html  group__intpin.js  group__progress__indicator.html  group__result__codes.html  group__result__codes.js  group__return__values.html  group__trace__tags.html  group__variables.html  group__variables.js  index.html  introduction.html  ipf_8c_source.html  ipf_8h.html  ipl_8c.js  ipl_8c_source.html  ipl_8h.js  ipl_8h_source.html  ipl__81118_8c.js  ipl__81118_8h.js  ipl__81119_8c_source.html  (+22 more)
doc/html/search/: all_62.js  all_64.js  all_6d.js  all_70.js  all_74.js  all_76.js  classes_69.js  defines_6d.js  defines_74.js  files_69.js  groups_69.js  groups_6a.js  groups_6f.js  groups_70.js  groups_73.js  groups_74.js  pages_74.js  search.js  variables_69.js  variables_6d.js  variables_74.js
example/: .cproject  .project  CMakeLists.txt  OS81210_Raspi_I2C.xml  unicens.xsd
example/src/: CMakeLists.txt  aardvark.c  hw_raspi.c  hw_win.c  main.c
examples/: Raspi_i2c_Durango.xml
include/: ipl.h  ipl_81118.h  ipl_81212.h  ipl_81214.h
ipl/: CMakeLists.txt  readme.txt
ipl/cfg/: ipl_cfg.h
ipl/doc/: Install_GCC_Cross_Toolchain.md  ipl.html
ipl/doc/html/: dir_0050ca94a265f7ecb389c44d1de9974e.html  dir_0050ca94a265f7ecb389c44d1de9974e.js  dir_1439f9853196f747acb3e6912b911d76.html  dir_1439f9853196f747acb3e6912b911d76.js  dir_644cf612535333a20af84e0349a95250.html  dir_644cf612535333a20af84e0349a95250.js  dir_792ca1e11906090e01dead78297002c3.html  dir_792ca1e11906090e01dead78297002c3.js  dir_9d2a425c484d38ddd81475bb685ae180.html  dir_9d2a425c484d38ddd81475bb685ae180.js  dir_b9da13b1bd5c9dad6d8b3c8cf87ba2a9.html  dir_b9da13b1bd5c9dad6d8b3c8cf87ba2a9.js  dir_fd014c6a40ca261c159b334dc78d7100.html  dir_fd014c6a40ca261c159b334dc78d7100.js  files.html  files.js  files_dup.js  globals.html  globals_0x64.html  globals_0x69.html  globals_0x6d.html  globals_0x6f.html  globals_0x73.html  globals_0x74.html  globals_0x76.html  globals_d.html  globals_defs.html  globals_defs.js  globals_defs_0x64.html  globals_defs_0x69.html  globals_defs_0x6d.html  globals_defs_0x73.html  globals_defs_0x74.html  globals_defs_0x76.html  globals_defs_d.html  globals_defs_i.html  globals_defs_m.html  globals_defs_s.html  globals_defs_t.html  globals_defs_v.html  (+178 more)
ipl/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_63.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6f.js  all_7.js  all_72.js  all_73.js  all_74.js  all_75.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_69.js  defines_0.js  defines_1.js  (+70 more)
ipl/inc/: ipf.h  ipl.h  ipl_81118.h  ipl_81119.h  ipl_81210.h  ipl_81212.h  ipl_81214.h  ipl_81216.h  ipl_pb.h
ipl/opt/inc/: ipl_81050.h  ipl_81060.h  ipl_81082.h  ipl_81092.h  ipl_81110.h  ipl_dmp.h  ipl_xtra.h
ipl/opt/src/: ipl_81050.c  ipl_81060.c  ipl_81082.c  ipl_81092.c  ipl_81110.c  ipl_dmp.c  ipl_xtra.c
ipl/src/: CMakeLists.txt  ipf.c  ipl.c  ipl_81118.c  ipl_81119.c  ipl_81210.c  ipl_81212.c  ipl_81214.c  ipl_81216.c
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/ipl/: CMakeLists.txt  ipl_81118.c  ipl_81119.c  ipl_81212.c  ipl_81214.c
